[package]
name = "test-gui"
version = "0.1.0"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2018"

[dependencies]
gtk = "0.9.2"
relm = "0.21.0"
relm-derive = "0.21.0"
serialport = "4.0.1"

[dependencies.ercp_basic]
git = "https://github.com/ercp/ercp_basic.rs.git"
branch = "develop"
features = ["host"]
